[7 Jan 2007]

* Add :match_all to find_tagged_with [Michael Sheakoski]